--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body class="Sheikah">
   <script id="main" type="text/stache" can-autorender>
     <game-bg></game-bg>
-    <game-container {^functions}="functions"></game-container>
-    <options-container {functions}="functions"></options-container>
+    <game-container {^functions}="functions" {^disabled-terms}="disabledTerms" {^custom-terms}="customTerms"></game-container>
+    <options-container {functions}="functions" {disabled-terms}="disabledTerms" {custom-terms}="customTerms"></options-container>
   </script>
 </body>
 </html>
