--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="keywords" content="zelda, botw, sheikah">
   <meta name="description" content="A simple game to learn Sheikah Script from the Legend of Zelda Breath of the Wild">
   <meta name="robots" content="all">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimal-ui">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/sheikahgame.css" type="text/css">
