about page styled, save data options finished, fonts tab styled ( but NYI ), background image and position change to random settings every min

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="js/listofterms.js"></script>
   <script type="text/javascript" src="js/sheikahgame.js"></script>
 </head>
-<body class="Sheikah">
+<body class="Sheikah" style="background-color: #59666C;">
   <script id="main" type="text/stache" can-autorender>
     <game-bg></game-bg>
     <game-container
